[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["kris927b <kristian.smed.noergaard@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
langchain = "^0.2.6"
langchain-openai = "^0.1.14"
langchain-community = "^0.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
